--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,7 @@
 .card{
     @apply bg-white rounded overflow-hidden shadow-md relative;
 }
+
+.bradge{
+    @apply bg-slate-200 text-center text-secondary-200 text-xs uppercase font-bold rounded p-1  absolute top-0 ml-2 mt-2;
+}
